apps/homelab-docs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homelab-docs
  name: homelab-docs
  namespace: homelab-docs
spec:
  selector:
    matchLabels:
      app: homelab-docs
  template:
    metadata:
      labels:
        app: homelab-docs
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          volumeMounts:
            - name: static
              mountPath: /usr/share/nginx/html
        - name: build
          image: alpine:latest
          workingDir: /usr/local/src
          command:
            - /bin/sh
            - -c
          args:
            - |
              apk add git make cargo
              apk add --repository "http://dl-cdn.alpinelinux.org/alpine/edge/testing" mdbook
              cargo install --root /usr/local mdbook-mermaid
              git clone https://github.com/khuedoan/homelab .
              cd docs
              while true; do
                mdbook-mermaid install .
                mdbook build . --dest-dir /usr/share/nginx/html
                sleep 120
                git fetch origin
                git reset --hard origin/master
              done
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          volumeMounts:
            - mountPath: /usr/local/src
              name: source
            - mountPath: /usr/share/nginx/html
              name: static
      volumes:
        - name: source
          emptyDir: {}
        - name: static
          emptyDir: {}
