apps/homelab-docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homelab-docs
  name: homelab-docs
  namespace: homelab-docs
spec:
  type: ClusterIP
  selector:
    app: homelab-docs
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
