apps/homelab-docs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-docs
  namespace: homelab-docs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/custom-http-errors: '404'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      error_page 404 https://homelab.khuedoan.com/404.html;
spec:
  rules:
    - host: &host homelab.khuedoan.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: homelab-docs
                port:
                  name: http
  tls:
    - secretName: homelab-docs-tls-certificate
      hosts:
        - *host
